--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,24 @@ nav a:hover {
 
 }
 
+header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: left;
+}
+
+h1,
+nav{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+h1 {
+  margin-bottom: 0;
+  margin-right: 1.5rem;
+}
+
+
 @media only screen and (min-width: 60em) {
 
   html {
