--- a/css/main.css
+++ b/css/main.css
@@ -99,10 +99,11 @@ h1 {
 
 }
 
-@media only screen and (min-wdith: 90em) {
+@media only screen and (min-width: 90em) {
 
   html {
-    font-size: 130%
+    font-size: 130%;
   }
 
 }
+s
