--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ nav a {
 
 nav a:hover {
   background-color: #333;
-  color: #fff
+  color: #fff;
 }
 
 @media only screen and (min-width: 25em) {
@@ -86,7 +86,7 @@ nav a:hover {
   }
 
   h1,
-  nav{
+  nav {
     display: inline-block;
     vertical-align: middle;
   }
@@ -95,7 +95,6 @@ nav a:hover {
     margin-bottom: 0;
     margin-right: 1.5rem;
   }
-
 
 }
 
